# Freelance-DAO

./: .env  .eslintrc.json  .gitignore  .npmrc  Freelancedao_updated-prd.md  LICENSE  PrivyHederaProvider.tsx  README.md  RainbowkitHederaProvider.tsx  eslint.config.js  freelancedao_prd.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  server.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
FDAO Escrow Smart Contract/: FreeLanceDAOEscrowPayment.json  FreeLanceDAOEscrowPayment.sol  hedera-escrow-testnet.json
Hedera Escrow Smart Contract/: FreeLanceDAOEscrowPayment.json  FreeLanceDAOEscrowPayment.sol  hedera-escrow-testnet.json
app/: LayoutComponent.tsx  globals.css  layout.tsx  page.tsx  page_new.tsx
base-smart-contracts/: .env.example  .gitignore  .npmrc  .solhint.json  GUIDE.md  README.md  hardhat.config.ts  mythril-solc.json  package-lock.json  package.json  tsconfig.json
components/: CustomHederaConnectButton.tsx  HashpackConnect.tsx  PrivyHederaConnectButton.tsx  TestnetBanner.tsx  WalletButton.tsx  access-control-demo.tsx  advanced-search.tsx  ai-agent-test-suite.tsx  contract-notification.tsx  edit-profile-modal.tsx  empty-profile-state.tsx  feedback-widget.tsx  hedera-wallet-connect.tsx  hire-agent-modal.tsx  iconify-icon.tsx  multi-wallet-connect.tsx  navigation.tsx  negotiation-modal.tsx  payment-modal.tsx  payment-system.tsx  profile-completion.tsx  protected-route.tsx  providers.tsx  role-aware-navigation.tsx  royalty-system.tsx  sidebar-navigation.tsx  signature-pad.tsx  tx-toast.tsx  web3-onboarding.tsx
config/: db.js
contracts/: FreeLanceDAODisputeContract.sol  FreeLanceDAOEscrowPayment.sol  FreeLanceDAOProposal.sol  FreeLanceDAOStakingContract.sol
controllers/: authController.js
lib/: auth-context.tsx  (+10 more)
smart_contract/freelance_dao/programs/governance/: Cargo.toml
smart_contract/freelance_dao/programs/governance/src/: account_structs.rs  accounts.rs  constants.rs  errors.rs  events.rs  governance.txt  lib.rs  state.rs  state_accounts.rs
smart_contract/freelance_dao/programs/governance/src/instructions/: admin.rs  execution.rs  init.rs  membership.rs  mod.rs  proposals.rs  treasury.rs  voting.rs
smart_contract/freelance_dao/programs/governance/src/state/: enums.rs
smart_contract/freelance_dao/programs/governance/src/utils/: mod.rs  staking.rs
smart_contract/freelance_dao/programs/shared/: Cargo.toml
smart_contract/freelance_dao/programs/shared/src/: lib.rs  shared.txt
smart_contract/freelance_dao/programs/staking/: Cargo.toml
smart_contract/freelance_dao/programs/staking/src/: constants.rs  errors.rs  events.rs  lib.rs  math.rs  state.rs  state_accounts.rs  utils.rs
smart_contract/freelance_dao/programs/staking/src/instructions/: admin.rs  init.rs  math.rs  mod.rs  query.rs  rewards.rs  ss  staking.rs  staking.txt  utils.rs
(+364 files in other folders)
