[package]
name = "shared"
version = "0.1.0"
description = "Shared utilities and constants for FreelanceDAO programs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shared"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = "0.31.1"